# lms

./: .gitignore  README.md  lms.html  package.json  test.db
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: map.py  (+17 more)
backend/app/core/: __init__.py  events.py  exceptions.py  middleware.py  rbac.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  academics.py  analytics.py  communication.py  content.py  helpdesk.py  iam.py  offline.py  receipts.py  student_success.py  timetable.py
backend/app/schemas/: __init__.py  analytics.py  assessment.py  auth.py  course.py  notification.py  rbac.py  receipt.py  submission.py  sync.py  ticket.py  user.py  venue.py
backend/app/services/: __init__.py  auth.py  badge.py  course_pack.py  email.py  grading.py  notification.py  pack.py  quote.py  rbac.py  receipt.py  risk.py  skill.py  sms.py  storage.py  streak.py  sync.py  venue.py
backend/app/tasks/: analytics.py  backup.py  celery_app.py  course_pack.py  grading.py  notifications.py  pack.py  risk.py
backend/app/tests/: __init__.py  conftest.py  test_auth.py  test_courses.py  test_new_auth.py  test_sync.py
backend/app/utils/: __init__.py  constants.py  idempotency.py  logging.py  security.py  validators.py
backend/apps/api/: main.py
backend/scripts/: deploy.sh  init_db.py  seed_data.py
backend/tests/: test_health.py
(+153 files in other folders)
