[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udsm-student-hub-api"
version = "1.0.0"
description = "UDSM Student Hub backend API"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
